--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: java
+arch:
+  - amd64
+  - ppc64le
 jdk:
-  - openjdk7
+  - openjdk11
   - oraclejdk8
 
 dist: trusty
@@ -18,6 +21,4 @@ cache:
 branches:
     except:
         - gh-pages
-notifications:
-    email:
-        - kama@soebes.de
+
